feat: export_hinters + standalone inference
